--- a/app/src/main/res/layout/exersise_list_item.xml
+++ b/app/src/main/res/layout/exersise_list_item.xml
@@ -15,8 +15,9 @@
 
         <ImageView
             android:id="@+id/exercise_list_item_image"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
