--- a/app/src/main/res/layout/exercise_fragment.xml
+++ b/app/src/main/res/layout/exercise_fragment.xml
@@ -100,6 +100,7 @@
                 android:id="@+id/next_gif"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="4dp"
                 app:srcCompat="@android:drawable/ic_menu_slideshow" />
 
         </LinearLayout>
