--- a/app/src/main/res/layout/exercise_fragment.xml
+++ b/app/src/main/res/layout/exercise_fragment.xml
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:text="TextView"
-                android:textColor="@color/material_dynamic_neutral10"
+                android:textColor="@color/teal_200"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
