--- a/app/src/main/res/layout/preparatory_fragment.xml
+++ b/app/src/main/res/layout/preparatory_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:text="@string/waiting_message"
-        android:textColor="@color/material_dynamic_neutral90"
+        android:textColor="@color/blue_dark"
         android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/preparatory_fragment_text_timer"
