--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,13 +2,14 @@
 <resources>
     <string-array name="exercise">
         <item>Широкие подтягивания|x10|podtyag_width2.gif</item> ←!- 0 →
-        <item>Узкие подтягивания|x10|podtyag_narrow2.gif</item> ←!- 1 →
-        <item>Девичьи подтягивания|x10|woman_pull2.gif</item> ←!- 2 →
+        <item>Узкие подтягивания|10|podtyag_narrow2.gif</item> ←!- 1 →
+        <item>Девичьи подтягивания|10|woman_pull2.gif</item> ←!- 2 →
         <item>Отжимания на перекладине|x10|otjim_perekl2.gif</item> ←!- 3 →
         <item>Отжимания узким хватом|x10|narrow_otjim2.gif</item> ←!- 4 →
         <item>Прокачка спины|x10|kach_spinyi2.gif</item> ←!- 5 →
         <item>Брусья|x10|brusya2.gif</item> ←!- 6 →
-        <item>Relax|30|rest2.gif</item> ←!- 6 →
+        <item>Relax|30|rest2.gif</item> ←!- 7 →
+        <item>well done|30|rest2.gif</item> ←!- 8 →
     </string-array>
 
 
