--- a/app/src/main/res/layout/days_list_item.xml
+++ b/app/src/main/res/layout/days_list_item.xml
@@ -45,17 +45,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textColor="@color/design_default_color_primary_variant"
+                android:textColor="@color/blue_dark"
                 android:textSize="20sp"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/days_list_item_counter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textColor="?attr/colorError"
-                android:textStyle="italic" />
+                android:textColor="?attr/colorError" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
