--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,7 +8,7 @@
         <item>Отжимания узким хватом|x10|narrow_otjim2.gif</item> ←!- 4 →
         <item>Прокачка спины|x10|kach_spinyi2.gif</item> ←!- 5 →
         <item>Брусья|x10|brusya2.gif</item> ←!- 6 →
-        <item>Relax|30|rest2.gif</item> ←!- 7 →
+        <item>Relax|30|rest.gif</item> ←!- 7 →
         <item>well done|30|rest2.gif</item> ←!- 8 →
     </string-array>
 
