--- a/app/src/main/res/layout/days_fragment.xml
+++ b/app/src/main/res/layout/days_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgr"
     tools:context=".fragments.DaysFragment">
 
 
@@ -69,10 +70,12 @@
                 android:layout_height="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginBottom="4dp"
                 android:progress="77"
                 android:progressBackgroundTint="#EF0957"
                 android:progressTint="#B2FF9800"
                 android:progressTintMode="multiply"
+                android:scaleY="1.5"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -81,7 +84,12 @@
                 android:id="@+id/fragment_days_status_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/backgr_alfa"
+                android:backgroundTint="@color/backgr_alfa"
+                android:backgroundTintMode="multiply"
                 android:fontFamily="sans-serif-black"
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
                 android:text="finish in 20 days"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toTopOf="@+id/progress_bar"
