--- a/app/src/main/res/layout/preparatory_fragment.xml
+++ b/app/src/main/res/layout/preparatory_fragment.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/cardview_dark_background">
+    android:background="@color/backgr">
 
     <TextView
         android:id="@+id/preparatory_fragment_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
+        android:fontFamily="@font/unlock"
         android:text="@string/waiting_message"
-        android:textColor="@color/blue_dark"
+        android:textColor="@color/progress"
         android:textSize="60sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/preparatory_fragment_text_timer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/sonsie_one"
         android:text="00 : 15"
-        android:textColor="@color/design_default_color_error"
+        android:textColor="@android:color/holo_orange_light"
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:scaleY="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/preparatory_fragment_text_timer" />
