--- a/app/src/main/res/layout/days_fragment.xml
+++ b/app/src/main/res/layout/days_fragment.xml
@@ -40,7 +40,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/fragment_days_slogan_image_view"
+                android:id="@+id/imageViewFullBody"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
