add exercises all v2

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,12 +3,12 @@
     <string-array name="exercise">
         <item>подтягивания|x10|podtyag_width2.gif</item> ←!- 0 →
         <item>подтягивания|x10|podtyag_narrow2.gif</item> ←!- 1 →
-        <item>подтягивания|10|woman_pull2.gif</item> ←!- 2 →
+        <item>подтягивания|x14|woman_pull2.gif</item> ←!- 2 →
         <item>на перекладине|x10|otjim_perekl2.gif</item> ←!- 3 →
         <item>узким хватом|x10|narrow_otjim2.gif</item> ←!- 4 →
         <item>спина|x10|kach_spinyi2.gif</item> ←!- 5 →
         <item>брусья|x10|brusya2.gif</item> ←!- 6 →
-        <item>Relax|20|rest.gif</item> ←!- 7 →
+        <item>Relax|3|rest.gif</item> ←!- 7 →
         <item>well done|30|rest2.gif</item> ←!- 8 →
         <item>бицепс|x15|biceps.gif</item> ←!- 9 →
         <item>грудь|x15|grud_l.gif</item> ←!- 10 →
@@ -32,25 +32,29 @@
         <item>левый прицепс|x10|triceps_l.gif</item> ←!- 28 →
         <item>правый трицепс|x10|triceps_r.gif</item> ←!- 29 →
         <item>трицепсы|x15|tricepsi.gif</item> ←!- 30 →
-        <item>выпады|x15|vypads2.gif</item> ←!- 31 →
+        <item>грудь|x15|grud_prav.gif</item> ←!- 31 →
+        <item>рука|x15|prav_ruka.gif</item> ←!- 32 →
+        <item>спина|x15|spina_L.gif</item> ←!- 33 →
+        <item>выпады|x15|vypads1.gif</item> ←!- 34 →
+        <item>выпады|x15|vypads2.gif</item> ←!- 35 →
     </string-array>
 
 
     <string-array name="day_exercise">
-        <item>0,7,1,7,30,7,27,7,12,7,14</item> ←!- Day 0 →
-        <item>23,7,24,7,2,7,3,7,25,7,5,7,6</item> ←!- Day 1 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0</item> ←!- Day 2 →
-        <item>0,7,1,7,2,7,3,7,4,7,5,7,6,7,1,7,2</item> ←!- Day 3 →
-        <item>6,7,28,7,29,7,3,7,27,7,1,7,0,7,5,7,4</item> ←!- Day 4 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0,7,5,7,4</item> ←!- Day 5 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0,7,5,7,4</item> ←!- Day 6 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0,7,5,7,4</item> ←!- Day 7 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0,7,5,7,4</item> ←!- Day 8 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0,7,5,7,4</item> ←!- Day 9 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0,7,5,7,4</item> ←!- Day 10 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0,7,5,7,4</item> ←!- Day 11 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0,7,5,7,4</item> ←!- Day 12 →
-        <item>6,7,5,7,4,7,3,7,2,7,1,7,0,7,5,7,4</item> ←!- Day 13 →
+        <item>0,7,10,7,12,7,1,7,30,7,27,7,14,7,32</item> ←!- Day 0 →
+        <item>2,7,21,7,22,7,4,7,6,7,5,7,9,7,25,7,28,7,29,7,34,7,35</item> ←!- Day 1 →
+        <item>0,7,10,7,12,7,30,7,3,7,20,7,23,7,24,7,15,7,31,7,11</item> ←!- Day 2 →
+        <item>20,7,32,7,14,7,4,7,9,7,11,7,31,7,33,7,26,7,1,7,34,7,35</item> ←!- Day 3 →
+        <item>2,7,9,7,6,7,9,7,28,7,29,7,27,7,21,7,22,7,13,7,16,7,15</item> ←!- Day 4 →
+        <item>5,7,0,7,9,7,4,7,23,7,24,7,1,7,9,7,30,7,34,7,35,7,17</item> ←!- Day 5 →
+        <item>26,7,33,7,25,7,14,7,32,7,1,7,21,7,22,7,0,7,4,7,5,7,9,7,28,7,29</item> ←!- Day 6 →
+        <item>0,7,10,7,12,7,1,7,30,7,27,7,14,7,32,7,34,7,35,7,9,7,18,7,19</item> ←!- Day 7 →
+        <item>2,7,21,7,22,7,4,7,6,7,5,7,9,7,25,7,28,7,29,7,34,7,35,7,15</item> ←!- Day 8 →
+        <item>0,7,10,7,12,7,30,7,3,7,20,7,23,7,24,7,15,7,31,7,11,7,18,7,19</item> ←!- Day 9 →
+        <item>20,7,32,7,14,7,4,7,9,7,11,7,31,7,33,7,26,7,1,7,34,7,35,7,20,7,27</item> ←!- Day 10 →
+        <item>2,7,9,7,6,7,9,7,28,7,29,7,27,7,21,7,22,7,13,7,16,7,15,7,30,7,9</item> ←!- Day 11 →
+        <item>5,7,0,7,9,7,4,7,23,7,24,7,1,7,9,7,30,7,34,7,35,7,17,7,11,7,31</item> ←!- Day 12 →
+        <item>26,7,33,7,25,7,14,7,32,7,1,7,21,7,22,7,0,7,4,7,5,7,9,7,28,7,29,7,17,7,10,7,12</item> ←!- Day 13 →
 
 
     </string-array>
