Fix logo and screen Orientation

--- a/app/src/main/res/layout/day_finish_layout.xml
+++ b/app/src/main/res/layout/day_finish_layout.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="WELL DONE"
+        android:text="@string/well_done_text"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:text="finish"
+        android:text="@string/finish_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
