--- a/app/src/main/res/layout/exersise_list_item.xml
+++ b/app/src/main/res/layout/exersise_list_item.xml
@@ -31,7 +31,7 @@
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="TextView"
+            android:text="@string/text_view_exercise_list"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
-            android:text="x 30"
+            android:text="@string/x_30"
             android:textColor="@color/blue_dark"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
