--- a/app/src/main/res/layout/preparatory_fragment.xml
+++ b/app/src/main/res/layout/preparatory_fragment.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/sonsie_one"
-        android:text="00 : 15"
+        android:text="@string/_00_15"
         android:textColor="@android:color/holo_orange_light"
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
