--- a/app/src/main/res/layout/days_fragment.xml
+++ b/app/src/main/res/layout/days_fragment.xml
@@ -44,7 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"
-                android:src="@drawable/splscr"
+                android:src="@drawable/mfrgm"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
